<resources>
    <string name="app_name" translatable="false">Mindall</string>
    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="login_and_start_planning">Login and start planning!</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account_yet">Don`t have an account, yet?</string>
    <string name="create">Create!</string>
    <string name="track_the_progress_of_your_habits_and_other_activities">Track the progress of your habits and other activities</string>
    <string name="create_account">Create account!</string>
    <string name="confirm_your_phone_number">Confirm your phone number</string>
    <string name="we_have_sent_a_verification_code_to_this_number">We have send a verification code to this number</string>
    <string name="confirm">Confirm</string>
    <string name="don_t_have_a_code">Don`t have a code?</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="_7" translatable="false">+7</string>
    <string name="create_btn">Create</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="phone_number_is_incorrect">Phone number is incorrect</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="update_email">Update email</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="done">Done</string>
    <string name="new_email">New email</string>
    <string name="change_email">Update email</string>
    <string name="update_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old password</string>
    <string name="update">Update</string>
    <string name="success">Success!</string>
    <string name="update_was_successful">Update was successful</string>
    <string name="ok">ok</string>
    <string name="we_send_a_verification_link_to">We send a verification link to</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="trakers">Trackers</string>
    <string name="pomodoro_timer">Pomodoro-Timer</string>
    <string name="other">Other</string>
    <string name="create_plans_for_your_cases_and_goals_for_the_next_days_weeks_month_or_years">Plan your business and goals for the day, week, month or year</string>
    <string name="track_your_progress_improve_and_go_towards_your_goal">Track your progress, improve and go towards your goal</string>
    <string name="work_and_learn_using_the_pomodoro_technique">Work and learn and use the Pomodoro technique</string>
    <string name="use_other_planners_for_specific_purposes">Use other planners and schedulers for specific purposes</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="plan_your_day_with_effectup">Plan your day with EffectUp</string>
    <string name="set_goals_for_the_week_and_mark_the_tasks">Set goals for the week and mark the tasks</string>
    <string name="set_goals_for_the_month_and_structure_your_tasks_and_plans">Set goals for the month and structure your tasks and plans</string>
    <string name="mark_your_annual_goals_important_data_and_other_notes">Mark your annual goals, important data, and other notes</string>
    <string name="tasks">Tasks:</string>
    <string name="view_details">View Details</string>
    <string name="task">Task</string>
    <string name="you_don_t_have_any_task_on_this_day">You don`t have any task on this day</string>
    <string name="add_tasks">Add task</string>
    <string name="my_daily_plans">My daily plans</string>
    <string name="plans_for">Plans for</string>
    <string name="daily_task">Tasks:</string>
    <string name="day_schedule">Day schedule:</string>
    <string name="line">-</string>
    <string name="add_daily_task">Add task</string>
    <string name="add">Add</string>
    <string name="what_you_need_to_do">What you need to do</string>
    <string name="urgent">urgent</string>
    <string name="not_very_urgent">Not very urgent</string>
    <string name="not_urgent">Not urgent</string>
    <string name="title">Title</string>
    <string name="ending">Ending</string>
    <string name="start">Start</string>
    <string name="notify_me_of_the_start">Notify me of the start</string>
    <string name="choose_week">Choose week</string>
    <string name="you_dont_have_any_plans">You don`t have any plans for this week</string>
    <string name="you_already_have_plans_for">You already have plans for week</string>
    <string name="choose_month">Choose month</string>
    <string name="choose_year">Choose year</string>
    <string name="goals_for_the_month">Goals for the month:</string>
    <string name="add_goal">Add goal</string>
    <string name="goals_for_the_year">Goals for the year:</string>
    <string name="important_dates">Important dates:</string>
    <string name="add_date">Add date</string>
    <string name="event">Event</string>
    <string name="what_is">What is</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="pomodoro_description">Принцип включает в себя деление рабочего времени на активные периоды и время отдыха. \nНапример, ставится таймер на 25 минут работы и 5 минут отдыха. \n Эти отрезки времени называют помидорами в честь кухонного таймера в виде помидора.</string>
    <string name="question" translatable="false">\?</string>
    <string name="your_time">Your time</string>
    <string name="great" translatable="false">Great!</string>
    <string name="planning">Planning</string>
    <string name="is_an_important_process_for_achieving_goals_in_any_area_of_life_and_activity"> This is an important process for achieving goals in any area of life and activity. </string>
    <string name="this_is_a_technique_for_managing_your_own_time_which_helps_you_work_more_productively_and_take_rest_breaks_at_a_strictly_allotted_time.">This is a technique for managing your own time, which helps you work more productively and take rest breaks at a strictly allotted time.</string>
    <string name="Pomodoro">Pomodoro</string>
    <string name="they_help_you_keep_track_of_the_process_in_any_of_your_endeavors_and_achieve_your_goals">They help you keep track of the process in any of your endeavors and achieve your goals</string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="week_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="qualities">
        <item>Great</item>
        <item>Good</item>
        <item>Not bad</item>
        <item>Very bad</item>
    </string-array>

    <string name="stop">Stop</string>
    <string name="pomodoro_started_desc_first">Помодоро таймер будет повторятся 4 раза: у вас будет по</string>
    <string name="pomodoro_desc_second">на работу и по</string>
    <string name="pomodoro_desc_third">на отдых</string>
    <string name="time_to_work">Time to Work!</string>
    <string name="choose_the_quality_of_your_mood_on">Choose the quality of your mood on</string>
    <string name="track_your_daily_mood">Track your daily mood!</string>
    <string name="time_to_rest">Time to rest!</string>
    <string name="your_pomodoro_timer_successfully_finished">Your pomodoro timer successfully finished</string>
    <string name="great_translatable">Great!</string>
    <string name="come_back_any_time">Come back anytime!</string>
    <string name="pomodoro_timer_will_repeat_4_times">Pomodoro timer will repeat 4 times</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="choose_time_rest">Choose rest time</string>
    <string name="choose_work_time">Choose work time</string>
    <string name="pause">Pause</string>
    <string name="tracker">Trackers</string>
    <string name="statistics">Statistics</string>
    <string name="sleep">Sleep</string>
    <string name="mood">Mood</string>
    <string name="habits">Habits</string>
    <string name="sleep_tracker_desc">It will help you track your sleep dynamics for every month</string>
    <string name="mood_tracker_desc">it will help you record your emotions at the end of the day</string>
    <string name="habits_tracker_desc">It will help you to engage in classes and get results</string>
    <string name="sleep_trackers">Sleep tracker</string>
    <string name="track_the_quality_of_your_sleep">Track the quality of your sleep</string>
    <string name="choose_the_quality_of_your_sleep_on">Choose the quality of your sleep on</string>
    <string name="already_have">Already have!</string>
    <string name="you_have_already_added_tracker_to_this_day_if_you_want_you_can_edit_this_tracker">You have already added tracker to this day! If you want, you can edit this tracker</string>
    <string name="mood_tracker">Mood tracker</string>
    <string name="habit_trackers">Habit Trackers</string>
    <string name="add_habit">Add habit</string>
    <string name="habit">Habit</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="you_managed_to_achieve_your_goal">You managed to achieve your goal</string>
    <string name="plan_using">Plan using</string>
    <string name="effectup">EffectUp</string>
    <string name="go_to_your_goal_easily_and_simply">Go to your goal easily and simply</string>
    <string name="need_an_account">Need an account</string>
    <string name="you_have_to_create_account_to_perform_this_action">You have to create account to perform this action</string>
</resources>