<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_margin="24dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorPrimary"
        app:srcCompat="@drawable/ic_time" />

    <NumberPicker
        android:id="@+id/hours_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_hours" />

    <NumberPicker
        android:id="@+id/minutes_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/NumberPickerTheme"
        app:layout_constraintEnd_toStartOf="@+id/second_picker"
        app:layout_constraintStart_toEndOf="@+id/hours_picker"
        app:layout_constraintTop_toBottomOf="@+id/title_minutes" />

    <NumberPicker
        android:id="@+id/second_picker"
        android:theme="@style/NumberPickerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_seconds" />

    <TextView
        android:id="@+id/colon_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:fontFamily="@font/bold_roboto"
        android:textSize="32sp"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/minutes_picker"
        app:layout_constraintEnd_toStartOf="@+id/minutes_picker"
        app:layout_constraintStart_toEndOf="@+id/hours_picker"
        app:layout_constraintTop_toTopOf="@+id/minutes_picker" />

    <TextView
        android:id="@+id/colon_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:fontFamily="@font/bold_roboto"
        android:textSize="32sp"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/minutes_picker"
        app:layout_constraintEnd_toStartOf="@+id/second_picker"
        app:layout_constraintStart_toEndOf="@+id/minutes_picker"
        app:layout_constraintTop_toTopOf="@+id/minutes_picker" />

    <TextView
        android:id="@+id/title_hours"
        style="@style/TextAppearance.Material3.BodyLarge.Bold.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hours"
        app:layout_constraintEnd_toEndOf="@+id/hours_picker"
        app:layout_constraintStart_toStartOf="@+id/hours_picker"
        app:layout_constraintTop_toBottomOf="@+id/title_main" />

    <TextView
        android:id="@+id/title_minutes"
        style="@style/TextAppearance.Material3.BodyLarge.Bold.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/minutes_picker"
        app:layout_constraintStart_toStartOf="@+id/minutes_picker"
        app:layout_constraintTop_toBottomOf="@+id/title_main" />

    <TextView
        android:id="@+id/title_seconds"
        style="@style/TextAppearance.Material3.BodyLarge.Bold.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="@+id/second_picker"
        app:layout_constraintStart_toStartOf="@+id/second_picker"
        app:layout_constraintTop_toBottomOf="@+id/title_main" />

    <TextView
        android:id="@+id/title_main"
        style="@style/TextAppearance.Material3.BodyLarge.Bold.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_work_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_pause"
        style="@style/Widget.Material3.Button.TonalButton.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutes_picker" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.Material3.Button.TextButton.Dialog.EffectUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_pause"
        app:layout_constraintEnd_toStartOf="@+id/button_pause"
        app:layout_constraintTop_toTopOf="@+id/button_pause" />

</androidx.constraintlayout.widget.ConstraintLayout>