<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="24dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/liquid_card_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_what"
            style="@style/TextAppearance.Material3.BodyMedium.Medium.EffectUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/what_is"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pomodoro"
            style="@style/TextAppearance.Material3.BodyMedium.Medium.EffectUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/pomodoro"
            android:textColor="#C50101"
            app:layout_constraintStart_toEndOf="@+id/title_what"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question"
            style="@style/TextAppearance.Material3.BodyMedium.Medium.EffectUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:text="@string/question"
            app:layout_constraintStart_toEndOf="@+id/pomodoro"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.Material3.BodySmall.ExtraSmall.Hint.Medium.EffectUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:padding="20dp"
            android:text="@string/pomodoro_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_what" />

        <ImageView
            android:id="@+id/pomodoro_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/pomodoro_phot" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_what"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_red_lightbulb" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>